--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "todo-angular2-firebase",
+  "name": "proekt-id",
   "version": "0.8.0",
   "description": "Todo app with Angular2, AngularFire2, and Firebase",
-  "homepage": "https://github.com/r-park/todo-angular2-firebase",
+  "homepage": "https://github.com/GeraltHao/proekt-final",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/r-park/todo-angular2-firebase.git"
+    "url": "git+https://github.com/GeraltHao/proekt-final.git"
   },
   "license": "MIT",
   "private": true,
@@ -78,14 +78,12 @@
     "winston": "~2.3.1"
   },
   "author": {
-    "name": "Richard Park",
-    "email": "objectiv@gmail.com"
+    "name": "Viktor",
+    "email": "vniderman@gmail.com"
   },
   "contributors": [
-    {"name": "Cody Lundquist", "email": "cody.lundquist@gmail.com"},
-    {"name": "Jason Shultz", "email": ""},
-    {"name": "Luke Schlangen", "email": "luke@lukeschlangen.com"},
-    {"name": "Sinan Bolel", "email": "sinanbolel@gmail.com"},
-    {"name": "Yannick Koehler", "email": "yannick@koehler.name"}
+    {"name": "Viktor", "email": "vniderman@gmail.com"},
+    {"name": "Serega", "email": ""},
+    {"name": "Kristina", "email": ""}
   ]
 }
