--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@angular/compiler": "4.1.2",
     "@angular/core": "4.1.2",
     "@angular/forms": "4.1.2",
+    "@angular/material": "^2.0.0-beta.6",
     "@angular/platform-browser": "4.1.2",
     "@angular/platform-browser-dynamic": "4.1.2",
     "@angular/router": "4.1.2",
@@ -82,8 +83,17 @@
     "email": "vniderman@gmail.com"
   },
   "contributors": [
-    {"name": "Viktor", "email": "vniderman@gmail.com"},
-    {"name": "Serega", "email": ""},
-    {"name": "Kristina", "email": ""}
+    {
+      "name": "Viktor",
+      "email": "vniderman@gmail.com"
+    },
+    {
+      "name": "Serega",
+      "email": ""
+    },
+    {
+      "name": "Kristina",
+      "email": ""
+    }
   ]
 }
