--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "angularfire2": "4.0.0-rc.0",
     "core-js": "~2.4.1",
     "firebase": "3.9.0",
+    "hammerjs": "^2.0.8",
     "rxjs": "5.4.0",
     "zone.js": "~0.8.10"
   },
